Modify Rangsaazi events

--- a/subevents/rangsaazi/index.html
+++ b/subevents/rangsaazi/index.html
@@ -105,7 +105,7 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a class="section__more-link" href="./rangsaazi.pdf">
+								<a class="section__more-link" target="_blank" href="./rangsaazi.pdf">
 									<span class="section__more-linktext">Click Here</span>
 									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 								</a>
@@ -169,7 +169,7 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a class="section__more-link" href="./rangsaazi.pdf">
+								<a class="section__more-link" target="_blank" href="./rangsaazi.pdf">
 									<span class="section__more-linktext">Click Here</span>
 									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 								</a>
@@ -234,7 +234,7 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link" href="./rangsaazi.pdf">
+							<a class="section__more-link" target="_blank" href="./rangsaazi.pdf">
 								<span class="section__more-linktext">Click Here</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
@@ -290,7 +290,7 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link" href="./rangsaazi.pdf">
+							<a class="section__more-link" target="_blank" href="./rangsaazi.pdf">
 								<span class="section__more-linktext">Click Here</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
@@ -349,7 +349,7 @@ rangoli competition covering the latest trending or social topics</span></p>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link" href="./rangsaazi.pdf">
+							<a class="section__more-link" target="_blank" href="./rangsaazi.pdf">
 								<span class="section__more-linktext">Click Here</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
