--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -28,12 +28,11 @@
         margin-top:30px;
     }
     img {
-        height: 200px;
-        width:300px;
+        
+       
     }
 .main_logo{
-  width: 130px;
-  height: 100px;
+  
   margin-top:-2vw;
   margin-left: -4vw;
 }
@@ -195,7 +194,7 @@
             <div class=" col-xs-12 col-sm-6 col-md-6" id="logos_contact" align="center">
                 <div class="row">
                     <div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
-                        <img class="footer_logo" src="../img/logo_footer.png">
+                        <img class="footer_logo" src="./img/logo_footer.png">
                         <h2>&nbsp;&nbsp;Culrav</h2>
                         <button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class=" fa fa-fw fa-facebook"></i></a></button>
                         <!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
