Add Design Team

--- a/team/index.html
+++ b/team/index.html
@@ -31,9 +31,9 @@
 	<script src="../../codrops/adpacks/analytics.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/footer.css" />
 	<style>
-		body{
-			overflow-y:auto;
-		}
+	body{
+		overflow-y:auto;
+	}
 	</style>
 </head>
 
@@ -300,6 +300,120 @@
 
 
 	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<div class="row" style="margin-top:6vh">
+
+		<center>
+			<div class="title">
+				Design Team
+			</div>
+		</center>
+
+
+
+
+		<div class="content">
+			<div class="grid">
+
+
+				<figure class="effect-chico">
+					<img src="img/saikrishna.jpg" alt="img15"/>
+					<figcaption>
+						<h4>Sai<span>&nbsp;&nbsp;Krishna</span></h4>
+						<!-- <p><i class="fa fa-phone" aria-hidden="true"></i></p> -->
+						<p><i class="fa fa-envelope" aria-hidden="true"></i></p>
+					</figcaption>			
+				</figure>
+				<figure class="effect-chico">
+					<img src="img/akashpatel.png" alt="img04"/>
+					<figcaption>
+						<h4>Akash<span>&nbsp;&nbsp;Patel</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br></p>
+					</figcaption>			
+				</figure>
+				<figure class="effect-chico">
+					<img src="img/namankashyap.jpg" alt="img04"/>
+					<figcaption>
+						<h4>Naman<span>&nbsp;&nbsp;Kashyap</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br></p>
+					</figcaption>			
+				</figure>
+
+
+
+
+
+
+<!-- 
+				<figure class="effect-chico">
+					<img src="img/jyot.jpg" alt="img15"/>
+					<figcaption><br>
+						<h4>Jyot<span>&nbsp;&nbsp;Mehta</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>jyot.mehta@culrav.in</p>
+					</figcaption>			
+				</figure>
+				<figure class="effect-chico">
+					<img src="img/vaibhav.jpg" alt="img04"/>
+					<figcaption><br>
+						<h4>Vaibhav<span>&nbsp;&nbsp;Gaiha</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>vaibhav.gaiha@culrav.in</p>
+					</figcaption>			
+				</figure> -->
+				<!-- <figure class="effect-chico">
+					<img src="img/shubham.jpg" alt="img04"/>
+					<figcaption>
+						<h4>Shubham <span>&nbsp;&nbsp;Singh</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>shubham.singh@culrav.in</p>
+						<p><i class="fa fa-phone" aria-hidden="true"></i><br>9198230226</p>
+					</figcaption>			
+				</figure> -->
+
+
+
+
+
+			<!-- 	<figure class="effect-chico">
+					<img src="img/utpal.jpg" alt="img15"/>
+					<figcaption>
+						<h4>Utpal<span>&nbsp;&nbsp;Singh</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>utpal.singh@culrav.in</p>
+						<p><i class="fa fa-phone" aria-hidden="true"></i><br>8004530210</p>
+					</figcaption>			
+				</figure> -->
+
+
+			</div>	
+		</div>
+
+
+
+
+
+
+
+
+
+	</div>
+
+
+
+
 
 
 
