Remove Design Team

--- a/team/index.html
+++ b/team/index.html
@@ -313,7 +313,7 @@
 
 
 
-
+<!-- 
 
 
 
@@ -336,7 +336,7 @@
 					<img src="img/saikrishna.jpg" alt="img15"/>
 					<figcaption>
 						<h4>Sai<span>&nbsp;&nbsp;Krishna</span></h4>
-						<!-- <p><i class="fa fa-phone" aria-hidden="true"></i></p> -->
+					
 						<p><i class="fa fa-envelope" aria-hidden="true"></i></p>
 					</figcaption>			
 				</figure>
@@ -360,7 +360,7 @@
 
 
 
-<!-- 
+
 				<figure class="effect-chico">
 					<img src="img/jyot.jpg" alt="img15"/>
 					<figcaption><br>
@@ -374,28 +374,8 @@
 						<h4>Vaibhav<span>&nbsp;&nbsp;Gaiha</span></h4>
 						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>vaibhav.gaiha@culrav.in</p>
 					</figcaption>			
-				</figure> -->
-				<!-- <figure class="effect-chico">
-					<img src="img/shubham.jpg" alt="img04"/>
-					<figcaption>
-						<h4>Shubham <span>&nbsp;&nbsp;Singh</span></h4>
-						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>shubham.singh@culrav.in</p>
-						<p><i class="fa fa-phone" aria-hidden="true"></i><br>9198230226</p>
-					</figcaption>			
-				</figure> -->
-
-
-
-
-
-			<!-- 	<figure class="effect-chico">
-					<img src="img/utpal.jpg" alt="img15"/>
-					<figcaption>
-						<h4>Utpal<span>&nbsp;&nbsp;Singh</span></h4>
-						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>utpal.singh@culrav.in</p>
-						<p><i class="fa fa-phone" aria-hidden="true"></i><br>8004530210</p>
-					</figcaption>			
-				</figure> -->
+				</figure>
+			
 
 
 			</div>	
@@ -410,7 +390,7 @@
 
 
 	</div>
-
+ -->
 
 
 
