Footer correction, contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -27,16 +27,24 @@
 	crossorigin="anonymous" ></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript" ></script>
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	<!--<script src="../../codrops/adpacks/analytics.js"></script>-->
-<script type="text/javascript">
-	$(document).ready(function(){
-		$('#navbutton').click(function(e){
-			$('#linkToEvent').toggle();
-		})		
-	})
+	<style>
+	main{
+		font-color: black;
+	}
+	.contacts p{
+		font-family:Electrolize;color:white;letter-spacing:0.1vw;margin-top:3px;
+		font-size: 1.6em;
 
-
-</script>
+	}
+	.contacts h2{
+		font-family: Electrolize;
+		font-size: 2.4em;
+		text-decoration: underline;
+	}
+	.title-div{
+		position: relative;
+	}
+</style>
 </head>
 <body class="demo-1">
 
@@ -71,81 +79,47 @@
 
 
 
-	<style type="text/css">
 
-	
 
-	</style>
-<center>
-	<div id="titleDiv">
-		<div class="title">
-			EVENTS
-		</div>
-		<a href="../subevents/rangmanch/index.html" id="linkToEvent">KNOW MORE</a>
-	</div>
-</center>
 
 
 
 
 
 	<main>
-		<div class="content">
-			<!-- Pieces Slider -->
-			<div class="pieces-slider">
-				<!-- Each slide with corresponding image and text -->
-				
-				<div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/rangmanch.jpg" alt="">
-					<a href="#"><h2 class="pieces-slider__text">Rangmanch</h2></a>
+			<center>
+		<div id="titleDiv">
+			<div class="title">
+				Contacts
+			</div>
+			<!-- <a href="../subevents/rangmanch/index.html" id="linkToEvent">KNOW MORE</a> -->
+		</div>
+	</center>
+		<div class="container">
+			<div class="row  contacts">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<h2>For Sponsorship queries.</h2>
+					<p>Riyaaz panjawani +918953567592</p>
+					<p>Prateek sahu +917408124141</p>
+					<p>Shubham singh tomer +9198230226</p>
 				</div>
-				
-
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/rangsaazi.jpg" alt="">
-					<h2 class="pieces-slider__text">Rangsaazi</h2>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<h2>For Participation and Hospitality queries.</h2>
+					<p>Sagar nagaich +91 81750 10260 </p>
+					<p>Utpal kumar +91 80045 30210 </p>
+					<p>Pragati gupta +91 73882 67383 </p>
 				</div>
-			</a>
-
-
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/litmuse.jpg" alt="">
-					<h2 class="pieces-slider__text">Litmuse</h2>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<h2>For media and promotion queries.</h2>
+					<p>Anushka +918957414728</p>
 				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/hindi.jpg" alt="">
-					<h2 class="pieces-slider__text">Literary (Hindi Events)</h2>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<h2>Public relations queries.</h2>
+					<p>Mohit borana +91 86871 09528</p> 
+					<p>Tushar garg   +‭97119 19938</p>
 				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/spandan.jpg" alt="">
-					<h2 class="pieces-slider__text">Spandan</h2>
-				</div>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/razmatazz.jpg" alt="">
-					<h2 class="pieces-slider__text">Razmatazz</h2>
-				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/darkroom.jpg" alt="">
-					<h2 class="pieces-slider__text">Dark Room</h2>
-				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/anunaad.jpg" alt="">
-					<h2 class="pieces-slider__text">Anunaad</h2>
-				</div>
-			</a>
-				<!-- Canvas to draw the pieces -->
-				<canvas class="pieces-slider__canvas"></canvas>
-				<!-- Slider buttons: prev and next -->
-				<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev left">
-				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next right">
 			</div>
 		</div>
-
-
 	</main>
 	<footer>
 
@@ -187,15 +161,8 @@
 							</div>
 							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
 								<ul style="list-style: none;">
-									<!--<li><strong>Navigate</strong></li>-->
-									<!--<li><a class="footer_links">Home</a></li>-->
-									<!--<li><a class="footer_links">About</a></li>-->
-									<!--<li><a class="footer_links">FAQs</a></li>-->
-									<!--<li><a class="footer_links">Register</a></li>-->
+
 									<li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
-									<!-- <li><a class="footer_links">Razmatazz</a></li>
-									<li><a class="footer_links">Dark Room</a></li>
-									<li><a class="footer_links">Anunaad</a></li> -->
 
 								</ul>
 							</div>
@@ -222,6 +189,4 @@
 	<script src='js/pieces.min.js' ></script>
 	<script src='js/demo.js' ></script>
 </body>
-
-<!-- Mirrored from tympanus.net/Tutorials/PiecesSlider/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 23 Feb 2018 11:03:44 GMT -->
 </html>
