--- a/subevents/anunaad/index.html
+++ b/subevents/anunaad/index.html
@@ -106,6 +106,7 @@
 					<li class="menu__item"><a class="menu__item-link" href="../../schedule">Schedule</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../sponsors">Sponsors</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../team">Team</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../contact">Contact</a></li>
 				</ul>
 				<div class="menu__toggle">
 					<span class="menu__toggle-inner menu__toggle-inner--open">
@@ -508,10 +509,11 @@
 						<div class="row last_row">
 							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
 								<ul style="list-style: none;">
-									<li><a href="../../index.html" target="_blank"class="footer_links">Home</a></li>
-									<li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
-									<li><a href="../../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
-									<li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+									<li><a href="../index.html" target="_blank"class="footer_links">Home</a></li>
+									<li><a href="../events/index.html" target="_blank" class="footer_links">Events</a></li>
+									<li><a href="../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
+									<li><a href="../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+							<li><a href="../contact/index.html" target="_blank" class="footer_links">Contact</a></li>
 								</ul>
 							</div>
 							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
