--- a/team/index.html
+++ b/team/index.html
@@ -61,6 +61,7 @@
 						<li><a href="../schedule/index.html">SCHEDULE</a></li>
 						<li><a href="../sponsors/index.html">SPONSORS</a></li>
 						<li><a href="../team/index.html">TEAM</a></li>
+						<li><a href="../contact/index.html">CONTACT</a></li>
 					</ul>
 				</div>
 			</div>
@@ -337,10 +338,11 @@
 				<div class="row last_row">
 					<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
 						<ul style="list-style: none;">
-							<li><a href="../../index.html" target="_blank"class="footer_links">Home</a></li>
-							<li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
-							<li><a href="../../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
-							<li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+							<li><a href="../index.html" target="_blank"class="footer_links">Home</a></li>
+							<li><a href="../events/index.html" target="_blank" class="footer_links">Events</a></li>
+							<li><a href="../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
+							<li><a href="../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+							<li><a href="../contact/index.html" target="_blank" class="footer_links">Contact</a></li>
 						</ul>
 					</div>
 					<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
