--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Events | Culrav | MNNIT</title>
+	<title>Contacts | Culrav | MNNIT</title>
 	<meta name="description" content="Information about different events under Culrav" />
 	<meta name="keywords" content="culrav,events,anunaad,rangmanch,rangsaazi,darkroom,literary,litmuse,razmatazz,spandhan" />
 	<meta name="author" content="MNNIT" />
@@ -98,25 +98,25 @@
 		<div class="container">
 			<div class="row  contacts">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<h2>For Sponsorship queries.</h2>
-					<p>Riyaaz panjawani +918953567592</p>
-					<p>Prateek sahu +917408124141</p>
-					<p>Shubham singh tomer +9198230226</p>
+					<h2>For Sponsorship Queries.</h2>
+					<p>Riyaaz Panjwani +918953567592</p>
+					<p>Prateek Sahu +917408124141</p>
+					<p>Shubham Singh Tomer +9198230226</p>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<h2>For Participation and Hospitality queries.</h2>
-					<p>Sagar nagaich +91 81750 10260 </p>
-					<p>Utpal kumar +91 80045 30210 </p>
-					<p>Pragati gupta +91 73882 67383 </p>
+					<h2>For Participation And Hospitality Queries.</h2>
+					<p>Sagar Nagaich +91 81750 10260 </p>
+					<p>Utpal Kumar +91 80045 30210 </p>
+					<p>Pragati Gupta +91 73882 67383 </p>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<h2>For media and promotion queries.</h2>
-					<p>Anushka +918957414728</p>
+					<h2>For Media And Promotion Queries.</h2>
+					<p>Anushka Srivastava +918957414728</p>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<h2>Public relations queries.</h2>
-					<p>Mohit borana +91 86871 09528</p> 
-					<p>Tushar garg   +‭97119 19938</p>
+					<h2>Public Relations Queries.</h2>
+					<p>Mohit Borana +91 8687109528</p> 
+					<p>Tushar Garg   +‭9711919938</p>
 				</div>
 			</div>
 		</div>
