Remove Campus Princess

--- a/subevents/literary/index.html
+++ b/subevents/literary/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Anunaad | Culrav | MNNIT</title>
+	<title>Hindi Literary | Culrav | MNNIT</title>
 	<meta name="description" content="LITERARY" />
 	<meta name="keywords" content="culrav,literary" />
 	<meta name="author" content="MNNIT" />
