--- a/subevents/litmuse/index.html
+++ b/subevents/litmuse/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Anunaad | Culrav | MNNIT</title>
+	<title>Litmuse | Culrav | MNNIT</title>
 	<meta name="description" content="LITMUSE" />
 	<meta name="keywords" content="culrav,litmuse" />
 	<meta name="author" content="MNNIT" />
