Change http tp https

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="culrav,events,anunaad,rangmanch,rangsaazi,darkroom,literary,litmuse,razmatazz,spandhan" />
 	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
