--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="culrav,MNNIT,ALlahabad,Cultural Fest" />
 	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Chewy:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Freckle+Face:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Electrolize:400,700" rel="stylesheet">
