Modify Schedule and Spandan

--- a/subevents/spandhan/index.html
+++ b/subevents/spandhan/index.html
@@ -102,7 +102,7 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a href="spandan.pdf"  target="_blank" class="section__more-link">
+							<a href="spandan.rtf"  target="_blank" class="section__more-link">
 								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
@@ -166,7 +166,7 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a href="spandan.pdf"  target="_blank" class="section__more-link">
+								<a href="spandan.rtf"  target="_blank" class="section__more-link">
 									<span class="section__more-linktext"><b>CLICK HERE</b></span>
 									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 								</a>
