--- a/schedule/index.html
+++ b/schedule/index.html
@@ -108,7 +108,28 @@ footer{
         </div>
       </li>    
 
-      <li class="timeline-inverted">
+
+
+
+      <li  class="timeline-inverted">
+        <div class="tl-circ"></div>
+        <div class="timeline-panel">
+          <div class="tl-heading">
+            <h4>Kavyanjali</h4>
+            <br><p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1:00 PM</small></p>
+          </div>
+          <div class="tl-body">
+            <p>GS Rooms</p>
+            
+            <p></p>
+          </div>
+        </div>
+      </li>    
+
+
+
+
+      <li >
         <div class="tl-circ"></div>
         <div class="timeline-panel">
           <div class="tl-heading">
@@ -121,7 +142,7 @@ footer{
         </div>
       </li>
 
-      <li>
+      <li  class="timeline-inverted">
         <div class="tl-circ"></div>
         <div class="timeline-panel">
           <div class="tl-heading">
@@ -136,7 +157,7 @@ footer{
         </div>
       </li>
 
-      <li class="timeline-inverted">
+      <li >
         <div class="tl-circ"></div>
         <div class="timeline-panel">
           <div class="tl-heading">
@@ -149,7 +170,7 @@ footer{
         </div>
       </li>
 
-      <li>
+      <li  class="timeline-inverted">
         <div class="tl-circ"></div>
         <div class="timeline-panel">
           <div class="tl-heading">
@@ -164,7 +185,7 @@ footer{
         </div>
       </li>
 
-      <li class="timeline-inverted">
+      <li >
         <div class="tl-circ"></div>
         <div class="timeline-panel">
           <div class="tl-heading">
@@ -177,7 +198,7 @@ footer{
         </div>
       </li>
 
-      <li>
+      <li  class="timeline-inverted">
         <div class="tl-circ"></div>
         <div class="timeline-panel">
           <div class="tl-heading">
