--- a/schedule/index.html
+++ b/schedule/index.html
@@ -280,6 +280,23 @@ footer{
           </div>
         </div>
       </li>
+
+
+       <li class="timeline-inverted">
+        <div class="tl-circ"></div>
+        <div class="timeline-panel">
+          <div class="tl-heading">
+            <h4>Motley</h4>
+            <br><p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2:00 PM-5:00 PM</small></p>
+          </div>
+          <div class="tl-body">
+            <p>Venue - Seminar Hall</p>
+          </div>
+        </div>
+      </li>
+
+
+
       <li>
         <div class="tl-circ"></div>
         <div class="timeline-panel">
