--- a/events/index.html
+++ b/events/index.html
@@ -26,7 +26,7 @@
 	crossorigin="anonymous" ></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript" ></script>
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-<script type="text/javascript">
+	<script type="text/javascript">
 	$(document).ready(function(){
 		$('#navbutton').click(function(e){
 			$('#linkToEvent').toggle();
@@ -34,7 +34,7 @@
 	})
 
 
-</script>
+	</script>
 </head>
 <body class="demo-1">
 
@@ -42,29 +42,29 @@
 
 
 	<div class="header-nightsky">
-					<nav class="navbar navbar-default navbar-static-top">
-						<div class="container">
-							<a class="navbar-brand" href="#"><img class="main_logo" src="img/logo.png"></a>
-							<div class="navbar-header">
-								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" id="navbutton">
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-							</div>
-							<div class="collapse navbar-collapse event-nav" id="myNavbar" >
-								<ul class="nav navbar-nav navbar-right ">
-									<li><a href="../index.html">HOME</a></li>
-									<li><a href="../events/index.html">EVENTS</a></li>
-									<li><a href="../schedule/index.html">SCHEDULE</a></li>
-									<li><a href="../sponsors/index.html">SPONSORS</a></li>
-									<li><a href="../team/index.html">TEAM</a></li>
-									<li><a href="../contact/index.html">CONTACT</a></li>
-								</ul>
-							</div>
-						</div>
-					</nav>
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container">
+				<a class="navbar-brand" href="#"><img class="main_logo" src="img/logo.png"></a>
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" id="navbutton">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 				</div>
+				<div class="collapse navbar-collapse event-nav" id="myNavbar" >
+					<ul class="nav navbar-nav navbar-right ">
+						<li><a href="../index.html">HOME</a></li>
+						<li><a href="../events/index.html">EVENTS</a></li>
+						<li><a href="../schedule/index.html">SCHEDULE</a></li>
+						<li><a href="../sponsors/index.html">SPONSORS</a></li>
+						<li><a href="../team/index.html">TEAM</a></li>
+						<li><a href="../contact/index.html">CONTACT</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
 
 
 
@@ -74,14 +74,14 @@
 	
 
 	</style>
-<center>
-	<div id="titleDiv">
-		<div class="title">
-			EVENTS
+	<center>
+		<div id="titleDiv">
+			<div class="title">
+				EVENTS
+			</div>
+			<a href="../subevents/rangmanch/index.html" id="linkToEvent">KNOW MORE</a>
 		</div>
-		<a href="../subevents/rangmanch/index.html" id="linkToEvent">KNOW MORE</a>
-	</div>
-</center>
+	</center>
 
 
 
@@ -106,91 +106,97 @@
 			</a>
 
 
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/litmuse.jpg" alt="">
-					<h2 class="pieces-slider__text">Litmuse</h2>
+			<a href="#"><div class="pieces-slider__slide">
+				<img class="pieces-slider__image" src="img/litmuse.jpg" alt="">
+				<h2 class="pieces-slider__text">Litmuse</h2>
+			</div>
+		</a>
+		<a href="#"><div class="pieces-slider__slide">
+			<img class="pieces-slider__image" src="img/hindi.jpg" alt="">
+			<h2 class="pieces-slider__text">Literary (Hindi Events)</h2>
+		</div>
+	</a>
+	<a href="#"><div class="pieces-slider__slide">
+		<img class="pieces-slider__image" src="img/spandan.jpg" alt="">
+		<h2 class="pieces-slider__text">Spandan</h2>
+	</div>
+	<a href="#"><div class="pieces-slider__slide">
+		<img class="pieces-slider__image" src="img/razmatazz.jpg" alt="">
+		<h2 class="pieces-slider__text">Razmatazz</h2>
+	</div>
+</a>
+<a href="#"><div class="pieces-slider__slide">
+	<img class="pieces-slider__image" src="img/darkroom.jpg" alt="">
+	<h2 class="pieces-slider__text">Dark Room</h2>
+</div>
+</a>
+<a href="#"><div class="pieces-slider__slide">
+	<img class="pieces-slider__image" src="img/anunaad.jpg" alt="">
+	<h2 class="pieces-slider__text">Anunaad</h2>
+</div>
+</a>
+
+<a href="#"><div class="pieces-slider__slide">
+	<img class="pieces-slider__image" src="img/mun.jpg" alt="">
+	<h2 class="pieces-slider__text">MNNIT MUN 2018</h2>
+</div>
+</a>
+<!-- Canvas to draw the pieces -->
+<canvas class="pieces-slider__canvas"></canvas>
+<!-- Slider buttons: prev and next -->
+<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev left">
+<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next right">
+</div>
+</div>
+
+
+</main>
+<footer>
+
+	<!--For links-->
+	<div class="row">
+		<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+			<div class="row">
+				<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+					<img class="footer_logo" src="../img/logo_footer.png">
+					<h2>&nbsp;&nbsp;Culrav</h2>
+					<button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class=" fa fa-fw fa-facebook"></i></a></button>
+					<!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
 				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/hindi.jpg" alt="">
-					<h2 class="pieces-slider__text">Literary (Hindi Events)</h2>
+				<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
+					<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
+					<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+					<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
+					<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
+					<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
+					<br>
 				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/spandan.jpg" alt="">
-					<h2 class="pieces-slider__text">Spandan</h2>
-				</div>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/razmatazz.jpg" alt="">
-					<h2 class="pieces-slider__text">Razmatazz</h2>
-				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/darkroom.jpg" alt="">
-					<h2 class="pieces-slider__text">Dark Room</h2>
-				</div>
-			</a>
-				<a href="#"><div class="pieces-slider__slide">
-					<img class="pieces-slider__image" src="img/anunaad.jpg" alt="">
-					<h2 class="pieces-slider__text">Anunaad</h2>
-				</div>
-			</a>
-				<!-- Canvas to draw the pieces -->
-				<canvas class="pieces-slider__canvas"></canvas>
-				<!-- Slider buttons: prev and next -->
-				<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev left">
-				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next right">
 			</div>
 		</div>
-
-
-	</main>
-	<footer>
-
-				<!--For links-->
-				<div class="row">
-					<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
-						<div class="row">
-							<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
-								<img class="footer_logo" src="../img/logo_footer.png">
-								<h2>&nbsp;&nbsp;Culrav</h2>
-								<button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class=" fa fa-fw fa-facebook"></i></a></button>
-								<!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
-							</div>
-							<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
-								<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
-								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
-								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
-								<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
-								<br>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-12 col-md-6" id="links">
-						<div class="row">
-							<div class="col-xs-12 col-sm-12" align="center" id="title">
-								<strong>Other</strong>
-							</div>
-						</div>
-						<div class="row last_row">
-							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
-								<ul style="list-style: none;">
-									<li><a href="../index.html" target="_blank"class="footer_links">Home</a></li>
-									<li><a href="../events/index.html" target="_blank" class="footer_links">Events</a></li>
-									<li><a href="../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
-									<li><a href="../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
-							<li><a href="../contact/index.html" target="_blank" class="footer_links">Contact</a></li>
-								</ul>
-							</div>
-							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
-								<ul style="list-style: none;">
-									<!--<li><strong>Navigate</strong></li>-->
-									<!--<li><a class="footer_links">Home</a></li>-->
-									<!--<li><a class="footer_links">About</a></li>-->
-									<!--<li><a class="footer_links">FAQs</a></li>-->
-									<!--<li><a class="footer_links">Register</a></li>-->
-									<li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
+		<div class="col-xs-12 col-sm-12 col-md-6" id="links">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12" align="center" id="title">
+					<strong>Other</strong>
+				</div>
+			</div>
+			<div class="row last_row">
+				<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
+					<ul style="list-style: none;">
+						<li><a href="../index.html" target="_blank"class="footer_links">Home</a></li>
+						<li><a href="../events/index.html" target="_blank" class="footer_links">Events</a></li>
+						<li><a href="../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
+						<li><a href="../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+						<li><a href="../contact/index.html" target="_blank" class="footer_links">Contact</a></li>
+					</ul>
+				</div>
+				<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
+					<ul style="list-style: none;">
+						<!--<li><strong>Navigate</strong></li>-->
+						<!--<li><a class="footer_links">Home</a></li>-->
+						<!--<li><a class="footer_links">About</a></li>-->
+						<!--<li><a class="footer_links">FAQs</a></li>-->
+						<!--<li><a class="footer_links">Register</a></li>-->
+						<li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
 									<!-- <li><a class="footer_links">Razmatazz</a></li>
 									<li><a class="footer_links">Dark Room</a></li>
 									<li><a class="footer_links">Anunaad</a></li> -->
@@ -209,16 +215,16 @@
 				</div>
 			</footer>
 
-	<script>
-	$('body').mousemove(function(e){
-		var amountMovedX = (e.pageX * -1 / 15);
-		var amountMovedY = (e.pageY * -1 / 15);
-		$(this).css('background-position', amountMovedX + 'px ' + amountMovedY + 'px');
-	});
-	</script>
-	<script src='js/anime.min.js' ></script>
-	<script src='js/pieces.min.js' ></script>
-	<script src='js/demo.js' ></script>
-</body>
+			<script>
+			$('body').mousemove(function(e){
+				var amountMovedX = (e.pageX * -1 / 15);
+				var amountMovedY = (e.pageY * -1 / 15);
+				$(this).css('background-position', amountMovedX + 'px ' + amountMovedY + 'px');
+			});
+			</script>
+			<script src='js/anime.min.js' ></script>
+			<script src='js/pieces.min.js' ></script>
+			<script src='js/demo.js' ></script>
+		</body>
 
-</html>
+		</html>
