--- a/schedule/index.html
+++ b/schedule/index.html
@@ -301,7 +301,7 @@ footer{
         <div class="tl-circ"></div>
         <div class="timeline-panel">
           <div class="tl-heading">
-            <h4><strong>Story Writing(Literary)</strong></h4>
+            <h4><strong>Tale Tellers(Literary)</strong></h4>
             <br><p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>  3:00 PM-5:00 PM</small></p>
           </div>
           <div class="tl-body">
