--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
 			<center><a href="./events/index.html" id="linkToEvent"><button class="btn">Events</button></a>
 				<a href="./sponsors/index.html" id="linkToEvent"><button class="btn">Sponsors</button></a>
 				<a href="./schedule/index.html" id="linkToEvent"><button class="btn">Schedule</button></a>
-				<a href="./team/index.html" id="linkToEvent"><button class="btn">Team</button></a></center>
-				<a href="./contact/index.html" id="linkToEvent"><button class="btn">Contact</button></a></center>
+				<a href="./team/index.html" id="linkToEvent"><button class="btn">Team</button></a>
+				<a href="./contact/index.html" id="linkToEvent"><button class="btn">Contact</button></a>
+				<a href="https://www.townscript.com/e/culrav-243004" id="linkToEvent" target="_blank"><button class="btn">Register</button></a></center>
 			</p>
 			<p style="font-family:Electrolize;color:white;letter-spacing:0.3vw;margin-top: 20px" class="college-name">Motilal Nehru National Institute Of Technology, Allahabad</p>
 		</div>
