Add lit details

--- a/subevents/litmuse/index.html
+++ b/subevents/litmuse/index.html
@@ -176,7 +176,7 @@
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
 							<a target="_blank" class="section__more-link">
-								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+								<center><span class="section__more-linktext"><a href="./litmuse.docx" target="_blank">Click Here</a></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -235,7 +235,7 @@
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
 							<a target="_blank" class="section__more-link">
-								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+								<center><span class="section__more-linktext"><a href="./litmuse.docx" target="_blank">Click Here</a></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -295,7 +295,7 @@
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
 							<a target="_blank" class="section__more-link">
-								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+								<center><span class="section__more-linktext"><a href="./litmuse.docx" target="_blank">Click Here</a></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -353,7 +353,7 @@
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
 							<a target="_blank" class="section__more-link">
-								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+								<center><span class="section__more-linktext"><a href="./litmuse.docx" target="_blank">Click Here</a></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -411,7 +411,7 @@
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
 							<center><a target="_blank" class="section__more-link">
-								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+								<center><span class="section__more-linktext"><a href="./litmuse.docx" target="_blank">Click Here</a></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a></center>
 						</div>
@@ -464,7 +464,7 @@
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
 							<center><a target="_blank" class="section__more-link">
-								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+								<center><span class="section__more-linktext"><a href="./litmuse.docx" target="_blank">Click Here</a></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a></center>
 						</div>
